--- a/nginx/conf.d/stat100.conf
+++ b/nginx/conf.d/stat100.conf
@@ -11,10 +11,15 @@ server {
         proxy_cache_bypass  0;
         proxy_redirect      off;
 
+        proxy_ignore_headers    "Cache-Control";
+
+        proxy_cache_lock            on;
+        proxy_cache_lock_timeout    30s;
+
         proxy_cache         stat100;
         proxy_cache_key     $scheme$host$uri$is_args$args;
         proxy_cache_valid   200 302 304 1d;
-        proxy_cache_valid   any 10m;
+        proxy_cache_valid   any 1m;
 
         proxy_pass          $scheme://$http_host$request_uri;
         break;
