--- a/nginx/conf.d/vcard.conf
+++ b/nginx/conf.d/vcard.conf
@@ -8,11 +8,13 @@ server {
     location / {
         access_log  /verenav/vcard.log dump_body;
 
+        proxy_http_version  1.1;
         proxy_no_cache      1;
         proxy_cache_bypass  1;
-
-        proxy_http_version  1.1;
         proxy_redirect      off;
+
+        proxy_ignore_headers    "Cache-Control";
+
         proxy_pass      $scheme://$server_name$request_uri;
 
         body_filter_by_lua_block {
