--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -42,7 +42,7 @@ http {
     proxy_request_buffering on;
     proxy_read_timeout      16s;
 
-    proxy_cache_path        /var/cache/nginx levels=1:2 keys_zone=stat100:4m max_size=2g inactive=12h;
+    proxy_cache_path        /var/cache/nginx levels=1:2 keys_zone=stat100:16m max_size=4g inactive=2d;
     proxy_temp_path         /var/cache/nginx/tmp;
 
     include /etc/nginx/conf.d/*.conf;
