--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -6,7 +6,7 @@ server {
     location / {
         access_log  /verenav/another.log main;
 
-        return 404;
+        proxy_pass  $scheme://$http_host$request_uri;
         break;
     }
 }
