Change logs of another sites

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -6,7 +6,6 @@ server {
     location / {
         access_log  /verenav/another.log main;
 
-        proxy_pass  $scheme://$http_host$request_uri;
-        break;
+        proxy_pass  $scheme://$host$uri;
     }
 }
