--- a/nginx/conf.d/stat100.conf
+++ b/nginx/conf.d/stat100.conf
@@ -20,15 +20,14 @@ server {
         # proxy_cache_key     $scheme$host$uri$is_args$args;
         # proxy_cache_valid   200 302 304 1d;
         # proxy_cache_valid   any 1m;
+        proxy_pass  $scheme://$host$uri;
 
-        proxy_pass          $scheme://$http_host$request_uri;
-        break;
+#        proxy_pass          $scheme://$http_host$request_uri;
+#        break;
     }
 
     location / {
-        access_log  /verenav/another.log main;
-
-        return 404;
-        break;
+        access_log  /verenav/another.log stat_uri;
+        proxy_pass  $scheme://$host$uri;
     }
 }
