Fix bugs for schema

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,7 +21,7 @@ http {
                             '$status $body_bytes_sent "$http_referer" '
                             '"$http_user_agent" "$http_x_forwarded_for"';
 
-    log_format      stat_uri '$scheme://$host$uri';
+    log_format      stat_uri '$host$uri';
     log_format      dump_body escape=json '$res_body'
 
     sendfile            on;
