Remove ssl handling:

--- a/nginx/conf.d/stat100.conf
+++ b/nginx/conf.d/stat100.conf
@@ -1,5 +1,5 @@
 server {
-    listen      21494 ssl;
+    listen      21494;
     server_name stat100.ameba.jp c.stat100.ameba.jp;
     resolver    8.8.8.8;
 
