--- a/nginx/conf.d/stat100.conf
+++ b/nginx/conf.d/stat100.conf
@@ -6,28 +6,11 @@ server {
     location ^~ /vcard/ {
         access_log  /verenav/stat100.log stat_uri;
 
-        # proxy_http_version  1.1;
-        # proxy_no_cache      0;
-        # proxy_cache_bypass  0;
-        # proxy_redirect      off;
-        #
-        # proxy_ignore_headers    "Cache-Control";
-        #
-        # proxy_cache_lock            on;
-        # proxy_cache_lock_timeout    5s;
-        #
-        # proxy_cache         stat100;
-        # proxy_cache_key     $scheme$host$uri$is_args$args;
-        # proxy_cache_valid   200 302 304 1d;
-        # proxy_cache_valid   any 1m;
-        proxy_pass  $scheme://$host$uri;
-
-#        proxy_pass          $scheme://$http_host$request_uri;
-#        break;
+        proxy_pass  $scheme://$server_name$request_uri;
     }
 
     location / {
         access_log  /verenav/another.log stat_uri;
-        proxy_pass  $scheme://$host$uri;
+        proxy_pass  $scheme://$server_name$request_uri;
     }
 }
