Add proxy_connect modules

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -22,6 +22,7 @@ http {
                             '"$http_user_agent" "$http_x_forwarded_for"';
 
     log_format      stat_uri '$host$uri';
+    log_format      connect_info '[CONNECT] $connect_host:$connect_port ($connect_addr)';
     log_format      dump_body escape=json '$res_body'
 
     sendfile            on;
