--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -3,9 +3,18 @@ server {
     listen      [::]:21494 default_server;
     resolver    8.8.8.8;
 
+    # forward proxy for CONNECT request
+    proxy_connect;
+    proxy_connect_allow             443;
+    proxy_connect_connect_timeout   30s;
+    proxy_connect_read_timeout      30s;
+    proxy_connect_send_timeout      30s;
+
+    access_log  /verenav/connect.log connect_info;
+
     location / {
         access_log  /verenav/another.log main;
-
         proxy_pass  $scheme://$host$uri;
+        proxy_set_header Host $host;
     }
 }
