--- a/nginx/conf.d/stat100.conf
+++ b/nginx/conf.d/stat100.conf
@@ -3,14 +3,24 @@ server {
     server_name stat100.ameba.jp c.stat100.ameba.jp;
     resolver    8.8.8.8;
 
+    # forward proxy for CONNECT request
+    proxy_connect;
+    proxy_connect_allow             443;
+    proxy_connect_connect_timeout   30s;
+    proxy_connect_read_timeout      30s;
+    proxy_connect_send_timeout      30s;
+
+    access_log  /verenav/connect.log connect_info;
+
     location ^~ /vcard/ {
         access_log  /verenav/stat100.log stat_uri;
-
         proxy_pass  $scheme://$server_name$request_uri;
+        proxy_set_header Host $host;
     }
 
     location / {
         access_log  /verenav/another.log stat_uri;
         proxy_pass  $scheme://$server_name$request_uri;
+        proxy_set_header Host $host;
     }
 }
